# fastapi-admin

./: .env.example  .gitignore  README.md  alembic.ini  api.http  main.py  pyproject.toml  skills-lock.json
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_seed_initial_data.py  c6c4b787c863_initial.py
docs/: api.http
src/boot/: __init__.py  exception.py  logger.py  middleware.py  route.py
src/core/: config.py  database.py  dependencies.py  exception.py  instance.py  loader.py  logger.py  mail.py  middlewares.py  repository.py  requests.py  router_class.py
src/handlers/: sys_log_handler.py
src/models/: __init__.py  auth.py  sys_log.py
src/modules/auth/: __init__.py  router.py  schemas.py  service.py  utils.py
src/modules/sys/: __init__.py  route.py  router.py
src/modules/sys/account/: __init__.py  repository.py  router.py  schemas.py  service.py
src/modules/sys/log/: router.py  schemas.py  service.py
src/modules/sys/menu/: __init__.py  repository.py  router.py  schemas.py  service.py
src/modules/sys/role/: __init__.py  repository.py  router.py  schemas.py  service.py
src/schemas/: pagination.py  response.py
src/utils/: hashs.py  import_util.py  imports.py  modules.py
tests/: conftest.py  test_account.py  test_menu.py  test_role.py
tools/: migrate.py
